src/MyStyles/style.css
/*
  list styling
*/

.list{
    display: flex;
    direction:ltr;
    user-select: none;
    width: 500px;
    height: 140px;
    background-color: whitesmoke;
    padding: 5px;
    margin: 15px;
    transition: .2s ease-in-out;
    border-radius: 7px;
    overflow: hidden;
  }
  
  .list:hover{
    transform: scale(1.1);
  }
  
  .listPic{
    position: relative;
    display: inline-block;
    cursor: pointer;
    padding: 0px;
    left: -1.1%;
    top: -5px;
    width: 110px;
    padding-top: 0%;
    padding-bottom: 0%;
    height: 155px;
  }
  
  .listPic img {
    height: 100%;
    width: 100%;
  }
  
  .textcat{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    padding-top: 0px;
    padding-left: 14px;
    padding-bottom: 10px;
    font-size: 14.5px;
    color: #282c34;
    text-align: left;
    text-align-last: auto;
  }

  .textdiv{
    cursor: pointer;
    padding-top: 10px;
    padding-bottom: 25px;
    width: 350px;
  }
  
  .listmisc{
    cursor: pointer;
    padding: 5px;
    display: inline-block;
    position: relative;
    align-self: flex-end;
    width: 25px;
    height: 25px;
    bottom: 5px;
  }

  .listmisc:hover{
    transform: scale(1.2);
  }

  /*
    info box styling
  */
  
  .extInfo{
    pointer-events: visible;
    text-align: center;
    color: darkslategray;
    background-color: darkcyan;
    padding: 10px;
    padding-bottom: 5px;
    position: fixed;
    width: 500px;
    top: 210px;
    right: 36.4vw;
    left: auto;
    box-shadow: 0 0 0 100vmax rgba(0,0,0,.5);
    z-index: 1000;
  }
  
  .box-header{
    width: 100%;
    font-family: fantasy;
    padding: 10px;
    font-size: xx-large;
    text-align: center;
    position: static;
    color: Azure;
  }
  
  .box-text{
    font-family: fantasy;
    color: Azure;
    font-size: larger;
    padding: 5px;
    text-align: left;
    align-content: center;
    font-size: 14.5px;
  }
  .misc{
    text-align: right;
    width: fit-content;
    height: fit-content;
    padding: 0px;
  }

  .closemodaldiv{
    cursor: pointer;
  }
  
  .catText{
    font-size: medium;
    padding: 10px;
    text-align-last: auto;
  }
  
  .plot{
    padding: 10px;
    text-align: center;
    height: auto;
    text-justify: distribute;
    font-size: medium;
  }
  
  /*
    Page styling
  */

  .searchicon{
    position: relative;
    left: -1px;
    top: 1px;
  }
  
  .listwrapper{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-content: center;
    align-items: center;
    position: absolute;
    top: 80px;
    left: 35vw;
    right: 35vw;
    width: fit-content;
    height: fit-content;
    padding: 10px;
    z-index: 900;
  }

.suggestion{
    display: block;
    user-select: none;
    position: relative;
    top: -7px;
    left: 10px;
    flex-direction: column;
    font-size: medium;
    font-size-adjust: initial;
    border-bottom-right-radius: 15px;
    border-bottom-left-radius: 15px;
    text-align: center;
    width: 250px;
    min-height: 50px;
    height: fit-content;
    padding-top: 5px;
    padding-bottom: 1px;
    background-color:   #383e49;
    /*
    #383e49
    */
    overflow: hidden;
    z-index: 998;
  }

  .suggestionText{
    padding-left: 5px;
    padding-right: 5px;
    font-size: 15px;
    cursor: pointer;
    width: 240px;
  }

  .suggestionText span.indexnum{
    position: relative;
    left: 10px;
  }

  .favbutton{
    user-select: none;
    cursor: pointer;
    position: fixed;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: azure;
    font-size: 16px;
    top: 0px;
    left: 90px;
    width: fit-content;
    height: fit-content;
    z-index: 1000;
    padding: 5px;
  }
  .historybutton{
    user-select: none;
    cursor: pointer;
    position: fixed;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: azure;
    font-size: 16px;
    top: 0px;
    left: 210px;
    width: fit-content;
    height: fit-content;
    z-index: 1000;
    padding: 5px;
  }

  .favbutton img{
    padding: 3px;
  }

  .favbutton:hover{
    color: rgb(194, 245, 245);
  }

  .historybutton:hover{
    color: rgb(194, 245, 245);
  }

  .toolbar {
    padding: 3px;
    display: flex;
    flex-direction: row;
    position: fixed;
    background-color: #383e49;
    /*
    #383e49
    */
    top: 0%;
    left: 0%;
    width: 100%;
    height: 60px;
    z-index: 999;
    min-width: 900px;
  }

  .logo{
    width: 55px;
    height: fit-content;
    position: inherit;
    top: 8px;
    right: 57vw;
  }
  
  .sitename{
    cursor: pointer;
    user-select: none;
    display: block;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 60px;
    position: inherit;
    padding: 1px;
    top: -14px;
    right: 46.7%;
    z-index: 1000;
  }
  
  .searchdiv{
    display: block;
    direction: ltr;
    padding: 3px;
    position: inherit;
    top: 5px;
    left: 43.5%;
    z-index: 999;
  }

  .input{
    display: contents;
  }

  .error{
    display: flex;
    align-content: center;
    align-items: center;
    flex-direction: column;
    font-family: 'Segoe UI', Verdana, Geneva, Tahoma, sans-serif;
    font-size: 27px;
    padding: 10px;
  }

  .suggestionText:hover{
    background-color: #454c58;
  }

  /*
    fav modal
  */

  .favmodal{
    overflow-y: auto;
    user-select: none;
    position: fixed;
    left: 0px;
    top: 65px;
    bottom: 0px;
    z-index: 1001;
    display: block;
    height: fit-content;
    min-width: 360px;
    max-width: 360px;
    padding: 10px;
    background-color: #383e49;
    color: whitesmoke;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 12.5px;
  }

  .favmodalheader{
    user-select: none;
    padding: 5px;
  }

  .favmodaltextwrapper{
    position: relative;
    display: inline-block;
    width: 100%;
  }

  .favmodaltext{
    cursor: pointer;
    display: inline-block;
    position: relative;
    direction: ltr;
    font-size: 12.5px;
    width: 85%;
    padding: 0px;
  }

  .favmodaltextwrapper span{
    cursor: pointer;
    position: relative;
    top: 5px;
    left: 10px;
  }

  .favmodaltext img{
    position: relative;
    top: 5px;
    right: -10px;
  }

  .checkboxS{
    cursor: pointer;
    position: relative;
    top: 3px;
    right: -3px;
  }

  .favmodaltext:hover{
    background-color: #4c5361;
  }

  /*.favmodal:after{
    content: " ";
    position: absolute;
    left: 40px;
    top: -10px;
    border-top: none;
    border-right: 10px solid transparent;
    border-left: 10px solid transparent;
    border-bottom: 10px solid whitesmoke;
  }*/

  /*
    full page view
  */

  .fullpagewrapper{
    background-color: #2f343d;
    position: absolute;
    display: flex;
    top: 67px;
    right: 20vw;
    width: 55vw;
    min-width: 700px;
    height: 65vw;
    min-height: 1100px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
  }

  .firstbox{
    position: relative;
    top: 70px;
    left: -30px;
    width: 55vw;
    height: 350px;
    text-size-adjust: auto;
    min-width: 700px;
    min-height: 200px;
  }

  .header{
    position: relative;
    width: 35vw;
    max-width: fit-content;
    left: 250px;
    top: -155px;
    font-size: 1.3rem;
    text-align: left;
  }

  .favstar{
    position: relative;
    top: 5px;
    padding-left: 10px;
  }

  .favstar:hover{
    cursor: pointer;
    transform: scale(1.);
  }

  .genretext{
    position: relative;
    width: 35vw;
    left: 250px;
    top: -155px;
    font-size: 1.1vw;
    text-align: left;
    text-size-adjust: auto;
  }

  .moviepic{
    position: relative;
    padding: 10px;
    padding-left: 0px;
    top: 0.5vw;
    left: 0vw;
    width: 50px;
    height: 150px;
  }

  .moviepic img{
    width: 11vw;
    min-width: 200px;
    height: 17.5vw;
    min-height: 310px;
  }

  .extratext{
    font-size: 1.1rem;
    position: relative;
    right: -1vw;
    text-size-adjust: auto;
  }

  .plottext{
    position: relative;
    width: 400px;
    top: -25%;
    left: 250px;
    font-size: 1.1rem;
    text-align: left;
    text-size-adjust: auto;
  }

  .box2{
    position: relative;
    display: block;
    text-align: center;
    width: 55vw;
    height: fit-content;
    padding: 20px;
    padding-bottom: 90px;
  }

  .textheader1{
    position: relative;
    align-self: center;
    right: -10vw;
    width: 30vw;
    padding: 10px;
    margin-bottom: 15px;
    border-bottom: 2px solid whitesmoke;
    text-size-adjust: auto;
  }

  .header1text{
    position: relative;
    width: 40vw;
    left: 10vw;
    font-size: 1.4rem;
    text-align: left;
    text-size-adjust: auto;
  }

  .box3{
    position: relative;
    right: -0vw;
    display: block;
    width: 55vw;
    height: fit-content;
    padding: 20px;
    padding-bottom: 50px;
  }

  .backButton{
    position: relative;
    top: 1vw;
    width: 35px;
    left: 95%;
    cursor: pointer;
  }

  .reviewtext{
    font-size: 1.2rem;
    position: relative;
    width: 35vw;
    left: 250px;
    top: -130px;
    text-align: left;
  }
  
  /*
    Respondsive querries
  */
  
  @media screen and (max-width: 1200px) {
    .extInfo{
      top: 120px;
      left: auto;
      right: 20vw;
    }
  
    .sitename{
      display: none;
      left: 0%;
      right: 50%;
    }
  
    .searchdiv{
      left: 45.5%;
    }
  
    .list{
      right: 20%;
      left: 12%;
    }
  }
  
  @media screen and (max-width: 1000px) {
    .sitename{
      display: none;
    }
  
    .extInfo{
      top: 120px;
      left: 6.3vw;
      right: 10vw;
    }
  
  }

